@@ -5,6 +5,8 @@ Changes for crash
 Unreleased
 ==========
 
+ - Update autocompletion to reflect newest crate features
+
  - Require Pygments version greater or equal 2.0
 
 2016/06/28 0.17.1
